fix overflowing image in Card component

--- a/GreenBay-Frontend/styles/Card.module.css
+++ b/GreenBay-Frontend/styles/Card.module.css
@@ -13,4 +13,17 @@
   background-color: #172a46;
   border: 1px solid #53d2ba;
   border-radius: 6px;
+  box-shadow: 4px 6px 20px 2px rgb(0, 0, 0, 0.8);
+}
+
+.imgContainer {
+  height: 200px;
+  width: 250px;
+  margin-bottom: 10px;
+}
+
+.imgContainer img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
